--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -77,7 +77,7 @@ $(function() {
 
 <!-- iPython Notebook tools -->
 <div class="list-group center-block">
-  <a class="list-group-item" href="/ipynb/" target="_blank">
+  <a class="list-group-item" href="/ipynb/tree" target="_blank">
     <img src="/ipynb/static/base/images/ipynblogo.png"
         alt="iPython Notebooks" style="width: 100%; padding: 1ex;">
   </a>
