--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<title>Jupyter, Python 2, no root</title>
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
